--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <title>Main Page</title>
 </head>
 <body>
-<a href=".triangleToPolyConverter.html">poly to triangle converter</a>
+<a href="./triangleToPolyConverter.html">poly to triangle converter</a>
 </body
