--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <title>Main Page</title>
+<link rel="stylesheet" type="text/css" href="./styles.css" />
 </head>
 <body>
-<a href="./triangleToPolyConverter.html">poly to triangle converter</a>
-</body
+<H2> <a href="./triangleToPolyConverter.html">poly to triangle converter</a> </H2>
+<P class="blocktext"> hello </P>
+</body>
